# keyrings.alt

./: .coveragerc  .gitignore  .hgtags  .travis.yml  CHANGES.rst  LICENSE  NEWS.rst  README.rst  conftest.py  mypy.ini  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/: FUNDING.yml
docs/: conf.py  index.rst
keyrings/alt/: Gnome.py  Google.py  Windows.py  _win_crypto.py  escape.py  fernet.py  file.py  file_base.py  keyczar.py  kwallet.py  multi.py  pyfs.py
keyrings/alt/tests/: backend.py  mocks.py  test_Gnome.py  test_Google.py  test_Windows.py  test_crypto.py  test_file.py  test_keyczar.py  test_pyfs.py
newsfragments/: +8f27251a.bugfix.rst  49.removal.rst
tests/: mocks.py  requirements.txt  test_Gnome.py  test_Google.py  test_Windows.py  test_crypto.py  test_fernet.py  test_file.py  test_keyczar.py  test_kwallet.py  test_multi.py  test_pyfs.py
