[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "keyrings.alt"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Alternate keyring implementations"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
	"jaraco.classes",
	"jaraco.context",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jaraco/keyrings.alt"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	"pytest-mypy",
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",

	# local
	"keyring >= 20",
	"pycryptodomex",
	"pycryptodome",
	# gdata doesn't currently install on Python 3
	# http://code.google.com/p/gdata-python-client/issues/detail?id=229
	'gdata; python_version=="2.7"',
	# keyczar doesn't currently install on Python 3.
	# http://code.google.com/p/keyczar/issues/detail?id=125
	'python-keyczar; python_version=="2.7"',
]
doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# tidelift
	"jaraco.tidelift >= 1.4",

	# local
]

[project.entry-points."keyring.backends"]
file = "keyrings.alt.file"
Gnome = "keyrings.alt.Gnome"
Google = "keyrings.alt.Google"
keyczar = "keyrings.alt.keyczar"
multi = "keyrings.alt.multi"
"Windows (alt)" = "keyrings.alt.Windows"

[tool.setuptools_scm]
