[build-system]
requires = [
	"setuptools>=77",
	"setuptools_scm[toml]>=3.4.1",
	# jaraco/skeleton#174
	"coherent.licensed",
]
build-backend = "setuptools.build_meta"

[project]
name = "keyrings.alt"
authors = [{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" }]
description = "Alternate keyring implementations"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
	"jaraco.classes",
	"jaraco.context",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jaraco/keyrings.alt"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",

	# local
	"keyring >= 20",
	"pycryptodomex",
	"pycryptodome",
	# gdata is archived since 2022, last update in 2016
	# it installs but doesn't import on Python 3
	# https://github.com/google/gdata-python-client/issues/29
	# https://github.com/google/gdata-python-client/issues/65
	'gdata; python_version=="2.7"',
	# Keyczar is deprecated in favor of Tink as of 2019. Archived since 2022.
	# python-keyczar also doesn't install on Python 3
	# https://github.com/google/keyczar/issues/125
	'python-keyczar; python_version=="2.7"',
]

doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# tidelift
	"jaraco.tidelift >= 1.4",

	# local
]

check = ["pytest-checkdocs >= 2.4", "pytest-ruff >= 0.2.1; sys_platform != 'cygwin'"]

cover = ["pytest-cov"]

enabler = ["pytest-enabler >= 2.2"]

type = [
	# upstream
	"pytest-mypy",

	# local
	"PyGObject-stubs",
]


[project.entry-points."keyring.backends"]
file = "keyrings.alt.file"
Gnome = "keyrings.alt.Gnome"
Google = "keyrings.alt.Google"
keyczar = "keyrings.alt.keyczar"
multi = "keyrings.alt.multi"
"Windows (alt)" = "keyrings.alt.Windows"


[tool.setuptools_scm]
