[metadata]
name = keyrings.alt
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Alternate keyring implementations
long_description = file:README.rst
url = https://github.com/jaraco/keyrings.alt
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.6
install_requires =

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.0.1

	# local
	backports.unittest_mock
	keyring >= 20

	fs>=0.5,<3
	pycryptodomex

	# gdata doesn't currently install on Python 3
	# http://code.google.com/p/gdata-python-client/issues/detail?id=229
	gdata; python_version=="2.7"

	# keyczar doesn't currently install on Python 3.
	# http://code.google.com/p/keyczar/issues/detail?id=125
	python-keyczar; python_version=="2.7"

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
keyring.backends =
	file = keyrings.alt.file
	Gnome = keyrings.alt.Gnome
	Google = keyrings.alt.Google
	keyczar = keyrings.alt.keyczar
	multi = keyrings.alt.multi
	pyfs = keyrings.alt.pyfs
	Windows (alt) = keyrings.alt.Windows
