[metadata]
name = keyrings.alt
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Alternate keyring implementations
long_description = file:README.rst
url = https://github.com/jaraco/keyrings.alt
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
	jaraco.classes

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8; \
		# workaround for tholo/pytest-flake8#87
		python_version < "3.12"
	# workaround for tholo/pytest-flake8#87
	flake8 < 5
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.3

	# local
	backports.unittest_mock
	keyring >= 20

	fs>=0.5,<3
	pycryptodomex
	pycryptodome

	# gdata doesn't currently install on Python 3
	# http://code.google.com/p/gdata-python-client/issues/detail?id=229
	gdata; python_version=="2.7"

	# keyczar doesn't currently install on Python 3.
	# http://code.google.com/p/keyczar/issues/detail?id=125
	python-keyczar; python_version=="2.7"

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]
keyring.backends =
	file = keyrings.alt.file
	Gnome = keyrings.alt.Gnome
	Google = keyrings.alt.Google
	keyczar = keyrings.alt.keyczar
	multi = keyrings.alt.multi
	pyfs = keyrings.alt.pyfs
	Windows (alt) = keyrings.alt.Windows
