[metadata]
name = keyrings.alt
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Alternate keyring implementations
long_description = file:README.rst
url = https://github.com/jaraco/keyrings.alt
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	jaraco.classes

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	backports.unittest_mock
	keyring >= 20

	pycryptodomex
	pycryptodome

	# gdata doesn't currently install on Python 3
	# http://code.google.com/p/gdata-python-client/issues/detail?id=229
	gdata; python_version=="2.7"

	# keyczar doesn't currently install on Python 3.
	# http://code.google.com/p/keyczar/issues/detail?id=125
	python-keyczar; python_version=="2.7"

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]
keyring.backends =
	file = keyrings.alt.file
	Gnome = keyrings.alt.Gnome
	Google = keyrings.alt.Google
	keyczar = keyrings.alt.keyczar
	multi = keyrings.alt.multi
	Windows (alt) = keyrings.alt.Windows
